--- a/style.css
+++ b/style.css
@@ -23,9 +23,104 @@ html{
     text-transform: capitalize;
     letter-spacing: 0.5rem;
     text-shadow: 0.3rem 0.3rem 0.3rem #000;
+
 }
 /* end of common */
+/* Navvar */
+.navbar{
+    height: 14rem;
+    background-color: #000;
+    width: 100%;
+    position:fixed;
+    top:-14rem;
+    z-index: 100;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: top 0.5s;
+}
+.navbar.change{
+    top:0;
+    transition: top .5s .2s;
+}
+.navbar-link{
+    color:#aaa;
+    margin:0 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: color 0.5s,
+    opacity 0.2s;
+}
+.change .navbar-link{
+    opacity: 1;
+}
+.change .navbar-link:nth-child(1){
+    transition: opacity .4s .5s,
+    color .4s;
+}
+.change .navbar-link:nth-child(2){
+    transition: opacity .4s .6s,
+    color .4s;
+}
+.change .navbar-link:nth-child(3){
+    transition: opacity .4s .7s,
+    color .4s;
+}
+.change .navbar-link:nth-child(4){
+    transition: opacity .4s .8s,
+    color .4s;
+}
+.change .navbar-link:nth-child(5){
+    transition: opacity .4s .9s,
+    color .4s;
+}
+
+
+
+.navbar-link:hover{
+    color:#fff;
+}
+.navbar-link i{
+    font-size: 7rem;
+}
+.navbar-link span{
+    font-size: 2.5rem;
+    font-weight: 900;
+    letter-spacing: 0.5rem;
+    margin-top: 0.5rem;
+}
+.menu{
+    z-index: 50;
+    width:4rem;
+    height: 6rem;
+    background-color: #000;
+    position: fixed;
+    top:1rem;
+    left: 5rem;
+    border-radius: 30rem 30rem 15rem 15rem;
+    box-shadow: .1rem .1rem .1rem #000, -.1rem -.1rem #000;
+    cursor: pointer;
+    transition: top .5s 0.2s;
+}
+.menu.change{
+    top:15rem;
+    transition: top 0.5s;
+}
+.menu::before{
+    content:"";
+    width: .3rem;
+    height: 15rem;
+    background-color: #000;
+    position:absolute;
+    top:-15rem;
+    left: calc(50% - .15rem);
+    box-shadow: .1rem 1rem #000;
+}
+/* end of navbar */
 /* section1 */
 .section-1{
     width: 100%;
@@ -252,3 +347,152 @@ html{
     transition: opacity 1s 1s;
 }
 /* end of section3 */
+
+/* section4 */
+.section-4{
+    width: 100%;
+    height: 30vh;
+    background-color: #222;
+    display: flex;
+    justify-content: space-around;
+    padding: 3rem 0;
+    align-items: flex-start;
+    position: relative;
+}
+.section-4-text{
+    text-transform: uppercase;
+}
+.section-4-heading{
+    font-size: 4rem;
+    font-weight: 900;
+    color:#a79a2d;
+}
+.section-4-paragraph{
+    font-size: 1.5rem;
+    color: #888;
+}
+.signup-form{
+    display: flex;
+    align-items: center;
+}
+.signup-form-input{
+    width: 35rem;
+    height: 5rem;
+    padding:1rem;
+    border:0.2rem solid #a79a2d;
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+    color:#a79a2d;
+}
+.signup-form-input::placeholder{
+    color:#a7a92d;
+}
+.signup-form-btn{
+    position:relative;
+    left: -4.5rem;
+    width: 4rem;
+    height: 4rem;
+    background-color: #333;
+    color:#a79a2d;
+    border:none;
+    outline: none;
+    font-size: 1.8rem;
+    cursor: pointer;
+}
+.copyright{
+    position: absolute;
+    bottom: 3rem;
+    font-size: 1.7rem;
+    color: #eee;
+    font-weight: 200;
+    border-top: .1rem solid #888;
+    padding-top:6rem;
+    width: 100%;    
+    text-align: center;
+}
+/* end of section4 */
+
+/* resposive */
+@media screen and (max-width:1400px) {
+    html{
+        font-size: 50%;
+    }
+    .section-2{
+        height: auto;
+        padding:10rem 0 12rem 0;
+    }
+    .cards-container{
+        margin-top:10rem;
+    }
+    .gallery-link{
+        widows: 40rem;
+        height: 25rem;
+
+    }
+    .food-img{
+        width:100%;
+        height: 100%;
+    }
+}
+
+@media (max-width: 1000px){
+    .section-heading{
+        font-size: 9rem;
+        margin:0 5rem;
+    }
+    .section-1-icons i{
+        font-size: 25rem;
+    }
+    .cards-container{
+        flex-wrap: wrap;
+    }
+    .card{
+        margin:5rem;
+    }
+}
+
+@media (max-width: 900px){
+    .navbar-link{
+        margin:2rem;
+    }
+    .navbar-link i{
+        font-size: 4rem;
+    }
+    .navbar-link span{
+        font-size: 2rem;
+    }
+}
+
+
+@media (max-width: 700px){
+    .section-heading{
+        font-size: 7rem;
+        margin:0 10rem;
+    }
+    .section-1-icons i{
+        font-size: 20rem;
+    }
+    .menu{
+        left:2rem;
+    }
+    .section-4{
+        height: 40rem;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+
+    }
+    .section-4-text{
+        margin-bottom: 8rem;
+    }
+}
+
+@media screen and (max-width:550px) {
+    html{
+        font-size: 40%;
+    }
+    .navbar-link{
+        margin:0.7rem;
+    }
+}
